fix spacing/formatting on academic exp page

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -190,6 +190,7 @@ footer p {
 
 .projects h1 {
     margin-top: 0;
+    margin-bottom: 0;
     color: #189AB4;
 }
 
@@ -233,13 +234,20 @@ footer p {
 
 .academic_exp h1 {
     margin-top: 0;
+    margin-bottom: 0;
     color: #189AB4;
+}
+
+.academic_exp p {
+    /* font-size: 20px; */
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .academic_exp .page_content .education_list_item {
     display: flex;
     justify-content: space-between;
-    border-bottom: #e3e3e3 solid 1px;
+    /* border-bottom: #e3e3e3 solid 1px; */
 }
 
 .education_list_item .education_date {
@@ -273,6 +281,7 @@ footer p {
 
 .professional_exp h1 {
     margin-top: 0;
+    margin-bottom: 0;
     color: #189AB4;
 }
 
